instant update to Sheet Configurations UI

--- a/static/index.html
+++ b/static/index.html
@@ -98,6 +98,12 @@
                     <div class="spinner"></div>
                     <p>Processing...</p>
                 </div>
+                <div id="notificationArea" class="notification-area hidden">
+                    <div class="notification">
+                        <i class="fas fa-sync"></i>
+                        <span id="notificationMessage">Data updated</span>
+                    </div>
+                </div>
                 <div id="statusMessage" class="status-message"></div>
             </div>
         </main>
